# ml-and-dl-project23

./: README.md
Air writing canva/: Air_Writing_Canvas.ipynb  README.md  app (1) (1).py  index (1).html  match_data.json  public_url.txt  requirements.txt
climate pattern analytics/: README.md  climate_pattern_model_training.ipynb  environmental_data.csv
files/: app.py
image recognition system/: MANIFEST.in  README.md  app.py  object_detector.py  pyproject.toml  requirements.txt
image recognition system/image_recognition/: __init__.py  detector.py  gui.py
image recognition system/image_recognition_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
vehicle detection/vehicle_detection_yolo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
